# ad3_OPC_extern_sort

./: .gitignore  CMakeLists.txt  sources  vraag.txt
extra/: benchmarks.sh  graphs.py
extra/output/: benchmark_results_compress.csv  benchmark_results_extract.csv  benchmark_results_sort.csv  benchmark_results_sort_bash.csv  benchmark_results_tree.csv
src/: compress.c  compress.h  dfs.c  dfs.h  extract.c  extract.h  linked_list.c  linked_list.h  main.c  prefix_util.c  prefix_util.h  sort.c  sort.h  tree.c  tree.h
src/sort/: sort.c  sort.h  sorting_linked_list.c  sorting_linked_list.h
src/tree/: linked_list.c  linked_list.h  prefix_util.c  prefix_util.h  tree.c  tree.h
test/: test_compression.c
